fix: bugs with too much scales and change parners, made padding from main partners

--- a/src/components/main-page/main-page.module.css
+++ b/src/components/main-page/main-page.module.css
@@ -17,7 +17,7 @@
   grid-template-columns: minmax(scale(500px), scale(1108px)) 1fr;
   grid-template-rows: repeat(6, max-content);
 
-  @media screen and (max-width: scale(1200px)) {
+  @media screen and (max-width: 1200px) {
     grid-template-areas:
       "title"
       "events"
